test/functions/ferguson/int32method-not64.good
int32method-not64.chpl:9: error: unresolved call 'int(64).foo()'
int32method-not64.chpl:1: note: this candidate did not match: (int(32)).foo()
int32method-not64.chpl:9: note: because method call receiver with type 'int(64)'
int32method-not64.chpl:1: note: is passed to formal 'this: int(32)'
